# HybridTridigionalSolvers

./: .gitignore  CMakeLists.txt  ClInit.cpp  ClInit.hpp  HelloWorld.cpp  Kernels.cpp  Kernels.hpp  PrintInformation.cpp  TridigionalEquation.cpp  TridigionalEquation.hpp  TridigionalMatrix.cpp  all double.txt  all float.txt  all float1.txt  double.txt  float.txt  initializer.cpp  initializer.hpp  input.txt  main.cpp  test.cpp  test.hpp  tools.cpp  tools.hpp
cmake/: CMakeCache.txt
kernels/: bsDouble.cl  bsFloat.cl  cr.cl  fr.cl  frDouble.cl  frFloat.cl  twoBuffersCr.cl
kernels/old/: bsDouble.cl  bsFloat.cl  frDouble.cl
